<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/yellow"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="420dp"
        android:layout_height="446dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/BinBTN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:text="@string/Bin"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/BinVAL"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DecBTN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:text="@string/Dec"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DecVAL"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/OctBTN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:text="@string/Oct"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/OctVAL"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_regular"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/HexaBTN"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_bold"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:text="@string/Hex"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/HexaVAL"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="@drawable/border"
                android:fontFamily="@font/comic_regular"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/display"
        android:layout_width="201dp"
        android:layout_height="42dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border"
        android:autofillHints="no"
        android:gravity="center"
        android:text="@string/display1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ConvertBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spin1"
        android:layout_width="237dp"
        android:layout_height="43dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/ConvertBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/Con"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>